--- a/bdaysu/index.html
+++ b/bdaysu/index.html
@@ -108,6 +108,15 @@
 		</div>
 		<div class="row message text-center">
 			<div class="col-md-12">
+				<p>Hey my darling!.... </p>
+				<p>I love you more than words can say :)</p>
+				<p> I am sending you a bouquet of warm wishes</p>
+				<p>You meant a so much to me</p>
+				<p>You teach me what is love... care.. attention and all..</p>
+				<p>U r very important to me </p>
+				<p>U can't understand I can't explain:)</p>
+				<p>Love u soo much my koonthi </p>
+				<p>I'm always with you</p>
 				<p>Today is...</p>
 				<p>as beautiful as other days</p>
 				<p>but you realize</p>
