--- a/Birthday/Birthday/index.html
+++ b/Birthday/Birthday/index.html
@@ -54,16 +54,15 @@
                 </div>
                 
                 <div class="row">
-                    <span>C</span>
-                    <span>o</span>
-                    <span>d</span>
-                    <span>e</span>
                     <span>M</span>
-                    <span>a</span>
-                    <span>s</span>
-                    <span>a</span>
-                    <span>l</span>
-                    <span>a</span>
+                    <span>y</span>
+                    <span>K</span>
+                    <span>O</span>
+                    <span>O</span>
+                    <span>N</span>
+                    <span>T</span>
+                    <span>H</span>
+                    <span>I</span>
                 </div>
             </div>
         </div>
