--- a/Birthday/Birthday/index.html
+++ b/Birthday/Birthday/index.html
@@ -55,7 +55,8 @@
                 
                 <div class="row">
                     <span>M</span>
-                    <span>y</span>
+                    <span>y</span> <br/>
+                    <br/>
                     <span>K</span>
                     <span>O</span>
                     <span>O</span>
